<resources>
    <string name="app_name">Test</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Gender">Gender</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="none"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="fasilitasCafe">
        <item>Wifi</item>
        <item>Colokan</item>
        <item>AC</item>
        <item>Toilet</item>
        <item>Tempat ibadah</item>
    </string-array>

    <string-array name="fasilitasCoworking">
        <item>Wifi</item>
        <item>Toilet</item>
        <item>Colokan</item>
        <item>Printer/scanner</item>
        <item>Quiete room</item>
        <item>Tempat parkir</item>
        <item>Meeting room</item>
        <item>Dispenser</item>
        <item>Tempat ibadah</item>
        <item>Kopi/teh</item>
    </string-array>
    <string name="title_activity__navigation">Activity_Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
